gave db global access

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div>
-			<h1 class="h1 display-1 text-center flex-column align-middle">Programming Inteview Question API</h1>
+			<h1 class="h1 display-1 text-center flex-column align-middle">Programming Inteview Questions API</h1>
 		</div>
 	</body>
 </html>
