Fixed a Typo in the title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		
 		<div>
-			<h1 class="bg-dark display-1 text-center text-light align-middle mb-5">Programming Inteview Questions API</h1>
+			<h1 class="bg-dark display-1 text-center text-light align-middle mb-5">Programming Interview Questions API</h1>
 		</div>
 
 		<hr>
