Changed the about section to 85 questions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		 	<div class="flex-column mt-5 lead">
 		 		<div>
 		 			<p>
-		 			 Here you will find a free api that allows you to retreive programming focused interview questions and solutions. I have set up four different api endpoints that currently only host a total of 10 questions each. The motivation for creating this API was the inability to find my own when looking for a free one to use. More questions will be added in the future. 
+		 			 Here you will find a free api that allows you to retreive programming focused interview questions and solutions. I have set up four different api endpoints that currently host a total of 85 programming questions and 10 star behavioral questions. The motivation for creating this API was the inability to find my own when looking for a free one to use. More questions will be added in the future. 
 		 			</p>
 		 			<p>
 		 				The types of endpoints include:	
